# Log-Sentinell

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_phase1_tests.py  vercel.json
backend/: llm_service.py  main.py
backend/incident/: __init__.py  builder.py  config.py  schema.py
docs/: architecture.md  backend.md  frontend.md
docs/phase5/: KNOWN_LIMITATIONS.md  base_vs_lora_inference.txt
docs/phases/: README.md
docs/phases/phase1/: DOCUMENTATION_INDEX.md  PHASE1_ARCHITECTURE.md  PHASE1_AUDIT_EXECUTIVE_SUMMARY.md  PHASE1_AUDIT_OUTCOMES.md  PHASE1_AUDIT_REPORT.md  PHASE1_COMPLETION_SUMMARY.txt  PHASE1_GATEKEEPER_CHECKLIST.md  PHASE1_SUMMARY.md  PHASE1_VISUAL_SUMMARY.txt
docs/phases/phase2/: PHASE2_DEVELOPER_GUIDE.md
frontend/log-sentinel/: .env.example  README.md  index.html  tailwind.config.ts
frontend/log-sentinel/src/: index.css
frontend/log-sentinel/src/components/: AnomalyTable.tsx  Header.tsx  IncidentExplanationPanel.tsx  IncidentList.tsx  LogUpload.tsx  SeverityBadge.tsx  StepIndicator.tsx
frontend/log-sentinel/src/lib/: api.ts
frontend/log-sentinel/src/pages/: Index.tsx
frontend/log-sentinel/src/types/: index.ts
llm/: __init__.py  config.py  mistral.py  prompt.py  schema.py
llm/inference/: debug_compare_lora.py
llm/training/: README.md  __init__.py  adapters.py  config.py  dataset.py  run_metadata.yaml  schema.py  train_err.txt  train_lora.py  train_out.txt
llm/training/configs/: lora_config.yaml
llm/training/datasets/phase5_incident_explanations/processed/: train.jsonl  val.jsonl
llm/training/datasets/phase5_incident_explanations/raw/ADFA_log/ADFA-LD/: ADFA-LD+Syscall+List.txt
llm/training/scripts/: test_lora.py  train_lora.py
scripts/: setup-dev.ps1  setup-dev.sh
src/: __init__.py
src/anomaly/: __init__.py  baselines.py  detectors.py  engine.py  schema.py  scoring.py
src/cli/: __init__.py
src/core/: __init__.py  config.py  exceptions.py  logging_config.py
src/data/: __init__.py  aggregation.py  features.py  ingestion.py  normalizers.py  parsers.py  schema.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: test_data_pipeline.py
tests/unit/: test_aggregation.py  test_anomaly_baselines.py  test_anomaly_detectors.py  test_anomaly_engine.py  test_features.py  test_incident_builder.py  test_llm_prompt.py  test_llm_service.py  test_lora_training_schema.py  test_normalizers.py  test_parsers.py  test_schema.py
